--- a/compose.yaml
+++ b/compose.yaml
@@ -7,15 +7,16 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - NEO4J_PASSWORD=password
-    depends_on:
-      - neo4j
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD}
+    links:
+      - "neo4j:neo4j"
+
   neo4j:
     container_name: neo4j
     image: neo4j:latest
     ports:
-      - 7474:7474
-      - 7687:7687
+      - "7474:7474"
+      - "7687:7687"
     environment:
       - NEO4J_AUTH=neo4j/${NEO4J_PASSWORD}
       - NEO4J_apoc_export_file_enabled=true
