--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 asgiref==3.8.1
+attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==5.0.6
 django_neomodel==0.2.0
 djangorestframework==3.15.1
+drf-spectacular==0.27.2
 idna==3.7
+inflection==0.5.1
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 neo4j==5.19.0
 neomodel==5.3.0
+numpy==1.26.4
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
+referencing==0.35.1
 requests==2.32.2
+rpds-py==0.18.1
 sqlparse==0.5.0
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
