refactor: delete secrets from .env.template

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,6 @@ NEO4J_HOST=neo4j
 NEO4J_PASSWORD=password
 NEO4J_USERNAME=neo4j
 NEO4J_PORT=7687
-X_ELS_APIKEY=27b4573814803b246abfac3615c505e0
-X_ELS_INSTTOKEN=330aca6833fdfff081a7bd4d1ed7392f
+X_ELS_APIKEY=
+X_ELS_INSTTOKEN=
 X_ELS_AUTHTOKEN=
