feat: generation model feature and tfidf generator

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-NEO4J_HOST=neo4j
-NEO4J_PASSWORD=password
+NEO4J_HOST=77266de8.databases.neo4j.io
+NEO4J_PASSWORD=uuWCmYJQXB9O6-qVZeWyv5D3vKUVI25qxdZxTMcDnUU
 NEO4J_USERNAME=neo4j
 NEO4J_PORT=7687
 X_ELS_APIKEY=
