--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,37 @@ asgiref==3.8.1
 attrs==23.2.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 Django==5.0.6
 django_neomodel==0.2.0
 djangorestframework==3.15.1
 drf-spectacular==0.27.2
 idna==3.7
 inflection==0.5.1
+joblib==1.4.2
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 neo4j==5.19.0
 neomodel==5.3.0
+nltk==3.8.1
 numpy==1.26.4
+pandas==2.2.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.35.1
+regex==2024.5.15
 requests==2.32.2
 rpds-py==0.18.1
+scikit-learn==1.5.0
+scipy==1.13.1
+six==1.16.0
 sqlparse==0.5.0
+textblob==0.18.0.post0
+threadpoolctl==3.5.0
+tqdm==4.66.4
 tzdata==2024.1
+Unidecode==1.3.8
 uritemplate==4.1.1
 urllib3==2.2.2
