--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 Django==5.0.6
+django-cors-headers==4.4.0
 django_neomodel==0.2.0
 djangorestframework==3.15.1
 drf-spectacular==0.27.2
