--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,19 @@
+# NEO4J DATABASE CONFIGURATION
 NEO4J_HOST=neo4j
 NEO4J_PASSWORD=narias98
 NEO4J_USERNAME=neo4j
 NEO4J_PORT=7687
+# ELSEVIER API CONFIGURATION
 X_ELS_APIKEY=
 X_ELS_INSTTOKEN=
 X_ELS_AUTHTOKEN=
-
+# DJANGO CONFIGURATION
 DEBUG=True
+# MONGO DATABASE CONFIGURATION
 MONGO_DB_NAME=
 MONGO_DB_USERNAME=
 MONGO_DB_PASSWORD=
-MONGO_DB_HOST=
-MONGO_DB_PORT=
+#default mongo
+MONGO_DB_HOST=mongo
+#default 27017
+MONGO_DB_PORT=27017
