add: authentication service refactor: scopus integration

--- a/.env.template
+++ b/.env.template
@@ -1,19 +1,15 @@
-# NEO4J DATABASE CONFIGURATION
-NEO4J_HOST=neo4j
-NEO4J_PASSWORD=narias98
-NEO4J_USERNAME=neo4j
-NEO4J_PORT=7687
-# ELSEVIER API CONFIGURATION
-X_ELS_APIKEY=
-X_ELS_INSTTOKEN=
-X_ELS_AUTHTOKEN=
-# DJANGO CONFIGURATION
-DEBUG=True
-# MONGO DATABASE CONFIGURATION
-MONGO_DB_NAME=
-MONGO_DB_USERNAME=
-MONGO_DB_PASSWORD=
-#default mongo
-MONGO_DB_HOST=mongo
-#default 27017
-MONGO_DB_PORT=27017
+NEO4J_HOST=VALUE
+NEO4J_PASSWORD=VALUE
+NEO4J_USERNAME=VALUE
+NEO4J_PORT=VALUE
+X_ELS_APIKEY=VALUE
+X_ELS_INSTTOKEN=VALUE
+X_ELS_AUTHTOKEN=VALUE
+DEBUG=VALUE
+MONGO_DB_NAME=VALUE
+MONGO_DB_USERNAME=VALUE
+MONGO_DB_PASSWORD=VALUE
+MONGO_DB_HOST=VALUE
+MONGO_DB_PORT=VALUE
+ADMIN_CENTINELA=VALUE
+PASSWORD_CENTINELA=VALUE
