refactor: scopus integration usecase

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-NEO4J_HOST=VALUE
-NEO4J_PASSWORD=VALUE
+NEO4J_HOST=neo4j
+NEO4J_PASSWORD=password
 NEO4J_USERNAME=VALUE
 NEO4J_PORT=VALUE
 X_ELS_APIKEY=VALUE
